with placeholder tagline.

--- a/static/main.less
+++ b/static/main.less
@@ -2,6 +2,8 @@
 @import "animate.css";
 @mobile: ~"only screen and (max-width: 992px)";
 
+@contrast: #2196F3;
+
 body {
   a {
     text-decoration: none;
@@ -17,6 +19,23 @@ div.page.landing {
       #f44336, #e91e63
     );
     text-align: center;
+    img {
+      margin-top: -80px;
+      //width: 400px;
+    }
+
+    div.tagline {
+      font-weight: 300;
+      font-size: 38px;
+      color: #fff;
+      margin: -55px auto 70px;
+      //margin: -15px auto 70px;
+
+      width: 600px;
+      //width: 850px;
+      text-align: center;
+
+    }
 
     a.main-button {
       font-size: 25px;
