--- a/static/main.css
+++ b/static/main.css
@@ -8,6 +8,17 @@ div.page.landing div.top-screen {
   background-image: linear-gradient(135deg, #f44336, #e91e63);
   text-align: center;
 }
+div.page.landing div.top-screen img {
+  margin-top: -80px;
+}
+div.page.landing div.top-screen div.tagline {
+  font-weight: 300;
+  font-size: 38px;
+  color: #fff;
+  margin: -55px auto 70px;
+  width: 600px;
+  text-align: center;
+}
 div.page.landing div.top-screen a.main-button {
   font-size: 25px;
   padding: 15px 25px;
