update logo to have shadow.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <base href="/"> <!-- needed for html5 pretty urls -->
     <meta charset="utf-8">
-    <title ng-bind-html="pageTitle()">oaDOI</title>
+    <title ng-bind-html="pageTitle()">UnPaywall</title>
     <meta name="viewport" content="initial-scale=1" />
 
 
