--- a/static/main.less
+++ b/static/main.less
@@ -21,17 +21,17 @@ div.page.landing {
     text-align: center;
     img {
       margin-top: -80px;
-      //width: 400px;
+      width: 350px;
     }
 
     div.tagline {
       font-weight: 300;
-      font-size: 30px;
+      font-size: 45px;
       color: #fff;
       margin: -55px auto 70px;
-      //margin: -15px auto 70px;
+      margin: -5px auto 70px;
 
-      width: 600px;
+      width: 850px;
       //width: 850px;
       text-align: center;
 
