--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,117 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,400italic');
 @import "animate.css";
 body a {
   text-decoration: none;
+}
+div.page.wood {
+  font-size: 22px;
+}
+div.page.wood table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 50px;
+}
+div.page.wood table th {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+div.page.wood table th.check {
+  text-indent: -100000px;
+}
+div.page.wood table th.name {
+  text-align: left;
+  padding-left: 5px;
+}
+div.page.wood table th.oa {
+  text-align: center;
+  padding-right: 2em;
+  width: 2em;
+}
+div.page.wood table th.boost {
+  text-align: left;
+  width: 5em;
+}
+div.page.wood table th.impact .below {
+  font-size: 75%;
+}
+div.page.wood table th.impact .below .now {
+  display: inline-block;
+  margin-right: 20px;
+}
+div.page.wood table th.impact .below .oa {
+  display: inline-block;
+  margin-left: 20px;
+}
+div.page.wood table th.impact .below .oa i {
+  font-size: 75%;
+}
+div.page.wood table tr {
+  border-bottom: 1px solid #333;
+}
+div.page.wood table tr.low-oa {
+  background: #FFCDD2;
+}
+div.page.wood table tr.low-oa td.oa,
+div.page.wood table tr.low-oa td.boost {
+  color: #B71C1C;
+}
+div.page.wood table tr.med-oa {
+  background: #FFF176;
+}
+div.page.wood table tr.med-oa td.oa,
+div.page.wood table tr.med-oa td.boost {
+  color: #F57F17;
+}
+div.page.wood table tr.high-oa {
+  background: #C5E1A5;
+}
+div.page.wood table tr.high-oa td.oa,
+div.page.wood table tr.high-oa td.boost {
+  color: #33691E;
+}
+div.page.wood table tr td {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+div.page.wood table tr td.check {
+  text-align: right;
+  padding-right: 15px;
+  font-size: 95%;
+}
+div.page.wood table tr td.name {
+  text-align: left;
+  width: 10em;
+}
+div.page.wood table tr td.oa {
+  text-align: right;
+  padding-right: 2em;
+  font-weight: 900;
+  font-size: 120%;
+  width: 2em;
+}
+div.page.wood table tr td.boost {
+  text-align: left;
+}
+div.page.wood table tr td span.now {
+  width: 2.5em;
+  margin-right: 0px;
+  text-align: right;
+  display: inline-block;
+  font-size: 75%;
+  margin-left: -0.5em;
+}
+div.page.wood table tr td .boost {
+  width: 3em;
+  display: inline-block;
+  text-align: right;
+}
+div.page.wood table tr td .boost .plus {
+  font-size: 60%;
+  vertical-align: middle;
+}
+div.page.wood table tr td .percent {
+  font-size: 75%;
 }
 div.page.landing div.top-screen {
   height: 100vh;
