--- a/static/main.less
+++ b/static/main.less
@@ -1,14 +1,145 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,400italic');
 @import "animate.css";
 @mobile: ~"only screen and (max-width: 992px)";
 
 @contrast: #2196F3;
+
+
+@goodColor: #C5E1A5;
+@fairColor: #FFF176;
+@badColor: #FFCDD2;
 
 body {
   a {
     text-decoration: none;
   }
 }
+
+div.page.wood {
+  // this is not for production. it's just a handy place to layout
+  // the admin table we're screenshotting for the wood foundation grant.
+
+  font-size: 22px;
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 50px;
+    th {
+      padding-bottom: 10px;
+      padding-top: 10px;
+      &.check {
+        text-indent: -100000px;
+      }
+      &.name {
+        text-align: left;
+        padding-left: 5px;
+      }
+      &.oa {
+        text-align: center;
+        padding-right: 2em;
+        width: 2em;
+      }
+      &.boost {
+        text-align: left;
+        width: 5em;
+      }
+      &.impact {
+        .below {
+          font-size: 75%;
+          .now {
+            display: inline-block;
+            margin-right: 20px;
+          }
+          .oa {
+            display: inline-block;
+            margin-left: 20px;
+            i {
+              font-size: 75%;
+            }
+          }
+
+        }
+      }
+    }
+    tr {
+      border-bottom: 1px solid #333;
+      &.low-oa {
+        background: @badColor;
+        td.oa, td.boost {
+          color: #B71C1C;
+        }
+      }
+      &.med-oa {
+        background: @fairColor;
+        td.oa, td.boost {
+          color: #F57F17;
+        }
+      }
+      &.high-oa {
+        background: @goodColor;
+        td.oa, td.boost {
+          color: #33691E;
+        }
+      }
+
+
+      td {
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        &.check {
+          text-align: right;
+          padding-right: 15px;
+          font-size: 95%;
+        }
+        &.name {
+          text-align: left;
+          width: 10em;
+        }
+        &.oa {
+          text-align: right;
+          padding-right: 2em;
+          font-weight: 900;
+          font-size: 120%;
+          width: 2em;
+        }
+        &.boost {
+          text-align: left;
+          //margin-right: -100px;
+        }
+
+        span.now {
+          width: 2.5em;
+          margin-right: 0px;
+          text-align: right;
+          display: inline-block;
+          font-size: 75%;
+          margin-left: -0.5em;
+        }
+        .boost {
+          width: 3em;
+          display: inline-block;
+          text-align: right;
+          .plus {
+            font-size: 60%;
+            vertical-align: middle;
+          }
+        }
+
+        .percent {
+          font-size: 75%;
+        }
+
+      }
+    }
+
+
+  }
+
+}
+
+
 
 div.page.landing {
 
