--- a/static/main.css
+++ b/static/main.css
@@ -5,15 +5,23 @@ body a {
 }
 div.page.wood {
   font-size: 22px;
+  background: #fff;
+  padding-top: 100px;
+  padding-bottom: 400px;
+}
+div.page.wood .icon-for-copy {
+  font-size: 24px;
+  padding: 50px;
+  color: #2196F3;
 }
 div.page.wood table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 50px;
 }
 div.page.wood table th {
   padding-bottom: 10px;
   padding-top: 10px;
+  font-size: 120%;
 }
 div.page.wood table th.check {
   text-indent: -100000px;
@@ -32,15 +40,17 @@ div.page.wood table th.boost {
   width: 5em;
 }
 div.page.wood table th.impact .below {
+  margin-top: 10px;
   font-size: 75%;
 }
 div.page.wood table th.impact .below .now {
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 15px;
+  font-weight: normal;
 }
 div.page.wood table th.impact .below .oa {
   display: inline-block;
-  margin-left: 20px;
+  margin-left: 15px;
 }
 div.page.wood table th.impact .below .oa i {
   font-size: 75%;
@@ -69,10 +79,23 @@ div.page.wood table tr.high-oa td.oa,
 div.page.wood table tr.high-oa td.boost {
   color: #33691E;
 }
+div.page.wood table tr.total {
+  border-top: 4px solid #333;
+  padding-top: 15px;
+}
+div.page.wood table tr.total i.fa-square-o {
+  display: none;
+}
+div.page.wood table tr.total td.name {
+  font-weight: bold;
+}
+div.page.wood table tr.total td {
+  padding-top: 18px;
+}
 div.page.wood table tr td {
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 div.page.wood table tr td.check {
   text-align: right;
@@ -87,26 +110,39 @@ div.page.wood table tr td.oa {
   text-align: right;
   padding-right: 2em;
   font-weight: 900;
-  font-size: 120%;
   width: 2em;
 }
 div.page.wood table tr td.boost {
   text-align: left;
+}
+div.page.wood table tr td.boost i {
+  vertical-align: 3px;
+}
+div.page.wood table tr td.boost.high i {
+  vertical-align: top;
+}
+div.page.wood table tr td.boost.med i {
+  font-size: 80%;
+}
+div.page.wood table tr td.boost.low i {
+  font-size: 60%;
 }
 div.page.wood table tr td span.now {
   width: 2.5em;
   margin-right: 0px;
   text-align: right;
   display: inline-block;
-  font-size: 75%;
   margin-left: -0.5em;
+  font-size: 85%;
 }
-div.page.wood table tr td .boost {
+div.page.wood table tr td span.boost {
   width: 3em;
   display: inline-block;
   text-align: right;
+  font-weight: bold;
+  font-size: 85%;
 }
-div.page.wood table tr td .boost .plus {
+div.page.wood table tr td span.boost .plus {
   font-size: 60%;
   vertical-align: middle;
 }
@@ -115,7 +151,7 @@ div.page.wood table tr td .percent {
 }
 div.page.landing div.top-screen {
   height: 100vh;
-  background-image: linear-gradient(135deg, #f44336, #e91e63);
+  background-image: linear-gradient(135deg, #cddc39, #00C853);
   text-align: center;
 }
 div.page.landing div.top-screen img {
