--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc4/angular-material.min.css">
 
     <link href="/static/main.css" rel="stylesheet">
-    <!--<link rel="icon" type="image/ico" href="/static/img/favicon.ico" /> -->
+    <link rel="icon" type="image/png" href="/static/img/favicon.png" />
 
 </head>
 
@@ -51,3 +51,4 @@
 
 <script src="//localhost:35727/livereload.js"></script>
 </body>
+</html>
