--- a/static/main.css
+++ b/static/main.css
@@ -3,171 +3,38 @@
 body a {
   text-decoration: none;
 }
-div.page.wood {
-  font-size: 22px;
-  background: #fff;
-  padding-top: 100px;
-  padding-bottom: 400px;
+div.page.landing .screen {
+  backgound: #fff;
 }
-div.page.wood .icon-for-copy {
+div.page.landing .screen .content {
+  width: 850px;
+  margin: 0 auto;
   font-size: 24px;
-  padding: 50px;
-  color: #2196F3;
+  line-height: 1.4;
 }
-div.page.wood table {
-  width: 100%;
-  border-collapse: collapse;
-}
-div.page.wood table th {
-  padding-bottom: 10px;
-  padding-top: 10px;
-  font-size: 120%;
-}
-div.page.wood table th.check {
-  text-indent: -100000px;
-}
-div.page.wood table th.name {
-  text-align: left;
-  padding-left: 5px;
-}
-div.page.wood table th.oa {
+div.page.landing .screen .content h2 {
+  font-weight: 300;
   text-align: center;
-  padding-right: 2em;
-  width: 2em;
+  font-size: 40px;
 }
-div.page.wood table th.boost {
-  text-align: left;
-  width: 5em;
-}
-div.page.wood table th.impact .below {
-  margin-top: 10px;
-  font-size: 75%;
-}
-div.page.wood table th.impact .below .now {
-  display: inline-block;
-  margin-right: 15px;
-  font-weight: normal;
-}
-div.page.wood table th.impact .below .oa {
-  display: inline-block;
-  margin-left: 15px;
-}
-div.page.wood table th.impact .below .oa i {
-  font-size: 75%;
-}
-div.page.wood table tr {
-  border-bottom: 1px solid #333;
-}
-div.page.wood table tr.low-oa {
-  background: #FFCDD2;
-}
-div.page.wood table tr.low-oa td.oa,
-div.page.wood table tr.low-oa td.boost {
-  color: #B71C1C;
-}
-div.page.wood table tr.med-oa {
-  background: #FFF176;
-}
-div.page.wood table tr.med-oa td.oa,
-div.page.wood table tr.med-oa td.boost {
-  color: #F57F17;
-}
-div.page.wood table tr.high-oa {
-  background: #C5E1A5;
-}
-div.page.wood table tr.high-oa td.oa,
-div.page.wood table tr.high-oa td.boost {
-  color: #33691E;
-}
-div.page.wood table tr.total {
-  border-top: 4px solid #333;
-  padding-top: 15px;
-}
-div.page.wood table tr.total i.fa-square-o {
-  display: none;
-}
-div.page.wood table tr.total td.name {
-  font-weight: bold;
-}
-div.page.wood table tr.total td {
-  padding-top: 18px;
-}
-div.page.wood table tr td {
-  text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-div.page.wood table tr td.check {
-  text-align: right;
-  padding-right: 15px;
-  font-size: 95%;
-}
-div.page.wood table tr td.name {
-  text-align: left;
-  width: 10em;
-}
-div.page.wood table tr td.oa {
-  text-align: right;
-  padding-right: 2em;
-  font-weight: 900;
-  width: 2em;
-}
-div.page.wood table tr td.boost {
-  text-align: left;
-}
-div.page.wood table tr td.boost i {
-  vertical-align: 3px;
-}
-div.page.wood table tr td.boost.high i {
-  vertical-align: top;
-}
-div.page.wood table tr td.boost.med i {
-  font-size: 80%;
-}
-div.page.wood table tr td.boost.low i {
-  font-size: 60%;
-}
-div.page.wood table tr td span.now {
-  width: 2.5em;
-  margin-right: 0px;
-  text-align: right;
-  display: inline-block;
-  margin-left: -0.5em;
-  font-size: 85%;
-}
-div.page.wood table tr td span.boost {
-  width: 3em;
-  display: inline-block;
-  text-align: right;
-  font-weight: bold;
-  font-size: 85%;
-}
-div.page.wood table tr td span.boost .plus {
-  font-size: 60%;
-  vertical-align: middle;
-}
-div.page.wood table tr td .percent {
-  font-size: 75%;
-}
-div.page.landing div.top-screen {
+div.page.landing .screen.top-screen {
   height: 100vh;
   background-image: linear-gradient(135deg, #cddc39, #00C853);
   text-align: center;
 }
-div.page.landing div.top-screen img {
+div.page.landing .screen.top-screen img {
   margin-top: -80px;
   width: 350px;
 }
-div.page.landing div.top-screen div.tagline {
+div.page.landing .screen.top-screen div.tagline {
   font-weight: 300;
   font-size: 45px;
   color: #fff;
-  margin: -55px auto 70px;
   margin: -5px auto 70px;
   width: 850px;
   text-align: center;
 }
-div.page.landing div.top-screen a.main-button {
+div.page.landing .screen.top-screen a.main-button {
   font-size: 25px;
   padding: 15px 25px;
   border-radius: 3px;
