--- a/static/main.less
+++ b/static/main.less
@@ -79,7 +79,7 @@ div.page.landing {
         margin: 0 auto;
         display: flex;
         align-items: center;
-        line-height: 1;
+        line-height: .8;
         text-align: left;
         justify-content: center;
 
