--- a/static/main.css
+++ b/static/main.css
@@ -16,10 +16,23 @@ div.page.landing .screen .content h2 {
   font-weight: 300;
   text-align: center;
   font-size: 40px;
+  color: #20e168;
 }
 div.page.landing .screen.top-screen {
+  /*
+      darker:
+      #62d717, #00e69d
+
+      darker but full saturation
+      #53d500, #01d893
+
+      brighter:
+      #61eb08, #01f8aa
+
+
+      */
   height: 100vh;
-  background-image: linear-gradient(135deg, #00e676, #62d717);
+  background-image: linear-gradient(135deg, #61eb08, #00dc97);
   text-align: center;
 }
 div.page.landing .screen.top-screen .navbar {
@@ -32,20 +45,20 @@ div.page.landing .screen.top-screen .navbar {
 div.page.landing .screen.top-screen .navbar #logo {
   width: 250px;
   float: left;
-  margin-top: -35px;
+  margin-top: -25px;
 }
 div.page.landing .screen.top-screen .navbar a.more {
   float: right;
   color: #fff;
   font-size: 24px;
-  padding: 15px 25px;
+  padding: 25px 25px;
 }
 div.page.landing .screen.top-screen div.tagline {
   font-weight: 300;
-  font-size: 45px;
+  font-size: 55px;
   color: #fff;
   margin: -5px auto 70px;
-  width: 850px;
+  width: 900px;
   text-align: center;
 }
 div.page.landing .screen.top-screen a.main-button {
@@ -71,4 +84,5 @@ div.page.landing .screen.top-screen a.main-button span.big {
 }
 div.page.landing .screen.top-screen a.main-button span.small {
   font-size: 14px;
+  font-weight: bold;
 }
