--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@ div.page.landing .screen {
   backgound: #fff;
 }
 div.page.landing .screen .content {
-  max-width: 850px;
+  max-width: 900px;
   margin: 0 auto;
   font-size: 24px;
   line-height: 1.4;
@@ -57,9 +57,25 @@ div.page.landing .screen.top-screen div.tagline {
   font-weight: 300;
   font-size: 55px;
   color: #fff;
-  margin: -5px auto 70px;
-  max-width: 900px;
+  margin: -5px auto 0;
   text-align: center;
+}
+@media only screen and (max-width: 600px) {
+  div.page.landing .screen.top-screen div.tagline {
+    font-size: 35px;
+    line-height: 1.3;
+    margin-top: 10px;
+  }
+}
+div.page.landing .screen.top-screen div.about {
+  color: #fff;
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
+@media only screen and (max-width: 600px) {
+  div.page.landing .screen.top-screen div.about {
+    font-size: 16px;
+  }
 }
 div.page.landing .screen.top-screen a.main-button {
   padding: 15px 25px;
@@ -93,7 +109,7 @@ div.footer {
   color: #fff;
 }
 div.footer .content {
-  max-width: 850px;
+  max-width: 900px;
   margin: 0 auto;
 }
 div.footer .content a {
