--- a/static/main.less
+++ b/static/main.less
@@ -25,7 +25,7 @@ div.page.landing {
   .screen {
     backgound: #fff;
     .content {
-      max-width: 850px;
+      max-width: 900px;
       margin: 0 auto;
       font-size: 24px;
       line-height: 1.4;
@@ -82,11 +82,23 @@ div.page.landing {
         font-weight: 300;
         font-size: 55px;
         color: #fff;
-        margin: -5px auto 70px;
-        max-width: 900px;
-        //width: 850px;
+        margin: -5px auto 0;
         text-align: center;
+        @media @xs {
+          font-size: 35px;
+          line-height: 1.3;
+          margin-top: 10px;
+        }
 
+      }
+
+      div.about {
+        color: #fff;
+        margin-top: 30px;
+        margin-bottom: 70px;
+        @media @xs {
+          font-size: 16px;
+        }
       }
 
       a.main-button {
@@ -131,7 +143,7 @@ div.footer {
   margin-top: 100px;
   color: #fff;
   .content {
-    max-width: 850px;
+    max-width: 900px;
     margin: 0 auto;
     a {
       color: #fff;
