--- a/static/main.less
+++ b/static/main.less
@@ -119,6 +119,9 @@ div.page.landing {
         line-height: .8;
         text-align: left;
         justify-content: center;
+        &:hover {
+          text-decoration: none;
+        }
 
         i {
           font-size: 50px;
