--- a/static/main.less
+++ b/static/main.less
@@ -189,6 +189,9 @@ div.page.landing {
             &.gold { background: @oaGold;}
             &.green { background: @oaGreen;}
             &.blue { background: @oaBlue;}
+            i {
+              margin-left: 3px;
+            }
           }
           div.text {
             flex-basis: 100%;
