--- a/static/main.less
+++ b/static/main.less
@@ -104,6 +104,7 @@ div.page.landing {
         color: #fff;
         margin-top: 30px;
         margin-bottom: 70px;
+        font-size: 23px;
         @media @xs {
           font-size: 16px;
         }
