improve documentation by moving faqs around, adding 'more' button. j

--- a/static/main.less
+++ b/static/main.less
@@ -46,6 +46,7 @@ div.page.landing {
     }
 
     &.top-screen {
+
       .navbar {
         position: absolute;
         top: 0;
@@ -57,7 +58,7 @@ div.page.landing {
           float: left;
           margin-top: -30px;
         }
-        a.more {
+        a.questions {
           float: right;
           color: #fff;
           font-size: 24px;
@@ -142,6 +143,18 @@ div.page.landing {
 
       }
     }
+
+    a.more {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      color: #fff;
+      display: block;
+      padding: 10px 0;
+      width: 100px;
+      margin-left: -50px;
+    }
+
   }
 }
 
