--- a/static/main.css
+++ b/static/main.css
@@ -53,7 +53,7 @@ div.page.landing .screen.top-screen .navbar #logo {
   float: left;
   margin-top: -30px;
 }
-div.page.landing .screen.top-screen .navbar a.more {
+div.page.landing .screen.top-screen .navbar a.questions {
   float: right;
   color: #fff;
   font-size: 24px;
@@ -111,6 +111,16 @@ div.page.landing .screen.top-screen a.main-button span.big {
 div.page.landing .screen.top-screen a.main-button span.small {
   font-size: 14px;
   font-weight: bold;
+}
+div.page.landing .screen a.more {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  color: #fff;
+  display: block;
+  padding: 10px 0;
+  width: 100px;
+  margin-left: -50px;
 }
 #faq {
   padding-top: 50px;
