--- a/static/main.less
+++ b/static/main.less
@@ -203,6 +203,7 @@ div.page.landing {
             &.gold { background: @oaGold;}
             &.green { background: @oaGreen;}
             &.blue { background: @oaBlue;}
+            &.black { background: #bbb;}
             i {
               margin-left: 3px;
             }
