--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,400italic');
 @import "animate.css";
+/*
+darker:
+#62d717, #00e69d
+
+darker but full saturation
+#53d500, #01d893
+
+brighter:
+#61eb08, #01f8aa
+*/
 body a {
   text-decoration: none;
   color: #2196F3;
@@ -25,20 +35,8 @@ div.page.landing .screen .content h2 {
   color: #20e168;
 }
 div.page.landing .screen.top-screen {
-  /*
-      darker:
-      #62d717, #00e69d
-
-      darker but full saturation
-      #53d500, #01d893
-
-      brighter:
-      #61eb08, #01f8aa
-
-
-      */
   height: 100vh;
-  background-image: linear-gradient(135deg, #61eb08, #00dc97);
+  background-image: linear-gradient(135deg, #20e168, #16b7bb);
   text-align: center;
 }
 div.page.landing .screen.top-screen .navbar {
@@ -84,31 +82,37 @@ div.page.landing .screen.top-screen div.about {
     font-size: 16px;
   }
 }
-div.page.landing .screen.top-screen a.main-button {
+div.page.landing .screen.top-screen .call-to-action-buttons {
+  display: flex;
+  justify-content: center;
+}
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button {
   padding: 15px 25px;
   border-radius: 3px;
   border: 3px solid #fff;
   color: #fff;
   width: 240px;
-  margin: 0 auto;
+  margin: 0 10px;
   display: flex;
   align-items: center;
   line-height: .8;
   text-align: left;
   justify-content: center;
 }
-div.page.landing .screen.top-screen a.main-button:hover {
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button:hover {
   text-decoration: none;
 }
-div.page.landing .screen.top-screen a.main-button i {
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button i,
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button img {
   font-size: 50px;
+  height: 50px;
   margin-right: 15px;
 }
-div.page.landing .screen.top-screen a.main-button span.big {
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button span.big {
   display: block;
-  font-size: 28px;
+  font-size: 24px;
 }
-div.page.landing .screen.top-screen a.main-button span.small {
+div.page.landing .screen.top-screen .call-to-action-buttons a.main-button span.small {
   font-size: 14px;
   font-weight: bold;
 }
@@ -178,7 +182,7 @@ div.page.landing .screen a.more {
   font-size: 14px;
 }
 div.footer {
-  background: #20e168;
+  background-image: linear-gradient(135deg, #20e168, #16b7bb);
   padding: 50px 20px;
   margin-top: 150px;
   color: #fff;
@@ -224,4 +228,20 @@ div.footer .content .credit {
   div.footer .content .credit {
     text-align: left;
   }
+}
+a.dialog-button {
+  background: #ddd;
+  display: inline-block;
+  padding: 12px;
+  margin: 0 5px 20px;
+  border-radius: 3px;
+  color: #000;
+}
+a.dialog-button:hover {
+  text-decoration: none;
+}
+a.dialog-button.primary {
+  font-weight: bold;
+  background: #20e168;
+  color: #fff;
 }
