--- a/static/main.less
+++ b/static/main.less
@@ -37,6 +37,9 @@ brighter:
 @gradientTop: @baseColor;
 @gradientBottom: rgb(22, 183, 187);
 
+@gradientBottom: @contrast;
+
+
 body {
   a {
     text-decoration: none;
@@ -71,6 +74,13 @@ div.page.landing {
 
     &.top-screen {
 
+      height: 100vh;
+      background-image: linear-gradient(
+        135deg,
+        @gradientTop, @gradientBottom
+      );
+
+
       .navbar {
         position: absolute;
         top: 0;
@@ -78,9 +88,9 @@ div.page.landing {
         right: 0;
         color: #fff;
         #logo {
-          width: 250px;
+          width: 200px;
           float: left;
-          margin-top: -30px;
+          margin-top: 0px;
         }
         a.questions {
           float: right;
@@ -91,76 +101,106 @@ div.page.landing {
 
       }
 
-
-      height: 100vh;
-      background-image: linear-gradient(
-        135deg,
-        @gradientTop, @gradientBottom
-      );
-      text-align: center;
-
-      div.tagline {
-        font-weight: 300;
-        font-size: 55px;
-        color: #fff;
-        margin: -5px auto 0;
-        text-align: center;
-        @media @xs {
-          font-size: 35px;
-          line-height: 1.3;
-          margin-top: 10px;
-        }
-
-      }
-
-      div.about {
-        color: #fff;
-        margin-top: 30px;
-        margin-bottom: 70px;
-        font-size: 23px;
-        @media @xs {
-          font-size: 16px;
+      .main-img {
+        img {
         }
       }
 
-      .call-to-action-buttons {
-        display: flex;
-        justify-content: center;
 
-        a.main-button {
-          padding: 15px 25px;
-          border-radius: 3px;
-          border: 3px solid #fff;
+      .main-copy {
+        max-width: 400px;
+        padding-top: 30px;
+        margin-left: 50px;
+        div.tagline {
+          font-weight: 300;
+          font-size: 45px;
           color: #fff;
-          width: 240px;
-          margin: 0 10px;
+          .period {
+            font-weight: 900;
+            display: none;
+          }
+          .tab {
+            background: dodgerblue;
+            background: @baseColor;
+            
+            
+            display: inline-block;
+            border-radius: 40px 0 0 40px;
+            padding: .2em .4em .2em .5em;
+            border: 3px solid #fff;
+            font-size: 55%;
+            vertical-align: 4px;
+          }
+          .tab-word {
+            display: inline;
+            display: none;
+          }
+          @media @xs {
+            font-size: 35px;
+            line-height: 1.3;
+            margin-top: 10px;
+          }
+
+        }
+        img.arrow {
+          height: 50px;
+          margin: 0 0 -20px -64px;
+          display: none;
+        }
+
+        div.about {
+          color: #fff;
+          margin-top: 30px;
+          margin-bottom: 70px;
+          font-size: 23px;
+          @media @xs {
+            font-size: 16px;
+          }
+        }
+
+        .call-to-action-buttons {
           display: flex;
-          align-items: center;
-          line-height: .8;
-          text-align: left;
           justify-content: center;
-          &:hover {
-            text-decoration: none;
-          }
 
-          i, img {
-            font-size: 50px;
-            height: 50px;
-            margin-right: 15px;
-          }
+          a.main-button {
+            padding: 15px 25px;
+            border-radius: 3px;
+            border: 3px solid #fff;
+            color: #fff;
+            width: 240px;
+            margin: 0 10px;
+            display: flex;
+            align-items: center;
+            line-height: .8;
+            text-align: left;
+            justify-content: center;
+            &:hover {
+              text-decoration: none;
+            }
 
-          span.big {
-            display: block;
-            font-size: 24px;
-          }
-          span.small {
-            font-size: 14px;
-            font-weight: bold;
+            i, img {
+              font-size: 50px;
+              height: 50px;
+              margin-right: 15px;
+            }
+
+            span.big {
+              display: block;
+              font-size: 24px;
+            }
+            span.small {
+              font-size: 14px;
+              font-weight: bold;
+            }
+
           }
 
         }
 
       }
+
+
+
 
     }
 
